@@ -1,1 +1,20 @@
 # Contact App Modified Version
+###### By Jawad Haider
+## Instruction
+13.5 (Contacts App Modification) Modify the Contacts app from the preceding exercises to include an image for each Contact. Provide a custom ListView cell factory that displays the Contact’s full name and picture with the names in sorted order by last name.
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
+## ScreenShots
+![](imgs/Screenshot%20from%202020-12-24%2013-01-01.png)
+![](imgs/Screenshot%20from%202020-12-24%2013-01-04.png)
+![](imgs/Screenshot%20from%202020-12-24%2013-01-06.png)
+
+
